fix ie layout issue with species box

--- a/app/assets/stylesheets/ie.css.scss
+++ b/app/assets/stylesheets/ie.css.scss
@@ -9,6 +9,14 @@ input[type="radio"], input[type="checkbox"] {
   margin-right: 5px;
 }
 
+div.dashboard table {
+  width: 100%;
+}
+
 tr.species-container td {
   padding: 20px;
+}
+
+tr.species-container td.species-count{
+  padding-right: 20px;
 }
